<resources>
    <string name="app_name">BorjaWeatherApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">List</string>
    <string name="data_list">dataList</string>
    <string name="user_list">userList</string>
    <string name="current_weather_title">Current Weather Forecast</string>
    <string name="weather_history_title">Weather History</string>
    <string name="weather_app">Weather App</string>
    <string name="description">New level of features with\nnew app</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_mpin">Enter M-PIN</string>
    <string name="not_you">Not You?</string>
    <string name="forgot_mpin">Forgot M-PIN?</string>
    <string name="register_now">No Account yet? Register Now</string>
    <string name="phone_permission">Go to settings and enable phone permission.</string>
    <string name="enter_valid_user_id">Please enter valid 8 or 11 digit User Id.</string>
    <string name="enter_valid_m_pin">Please enter valid M-PIN</string>
    <string name="enter_valid_acc">Please enter valid account.</string>
    <string name="information">Information</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="current_weather">currentWeather</string>
    <string name="weather_list">weatherList</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="proceed">Proceed</string>
    <string name="registration">Registration</string>
    <string name="success">Success</string>
    <string name="all_fields_mandatory">All fields are mandatory</string>
    <string name="set_mpin">Set M-PIN</string>
    <string name="go_to_login">Go to Login</string>
    <string name="no_result">No result found.</string>
    <string name="registration_success">Registration successful.</string>
    <string name="enter_city">Enter your city</string>
    <string name="enter_valid_city">Enter valid city.</string>
    <string name="details">Details:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
</resources>