<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:baselineAligned="false"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.6"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/txt_mw"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_25sdp"
                                android:layout_marginTop="@dimen/_25sdp"
                                android:text="@string/weather_app"
                                android:textColor="?attr/primaryTextColor"
                                android:textSize="@dimen/_17ssp"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/img_menu" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/txt_new_features"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_25sdp"
                                android:layout_marginTop="@dimen/_25sdp"
                                android:lineSpacingExtra="@dimen/_5sdp"
                                android:text="@string/description"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="normal"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/txt_mw" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_75sdp"
                            android:layout_gravity="center"
                            android:layout_weight="0.4"
                            android:src="@drawable/ic_app_icon"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/login_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:orientation="vertical"
                        android:visibility="visible"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_new_features">

                        <LinearLayout
                            android:id="@+id/login_layout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:visibility="visible">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/til_mobile"
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:boxStrokeColor="?attr/secondaryTextColor"
                                    app:errorEnabled="true"
                                    app:hintTextColor="?attr/secondaryTextColor">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/tie_mobile"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:digits="+0123456789"
                                        android:focusable="true"
                                        android:hint="@string/enter_mobile_number"
                                        android:imeOptions="actionNext"
                                        android:inputType="phone" />

                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_5sdp"
                                    android:text="@string/enter_mpin" />

                                <com.example.borjaweatherapp.utils.LoginPinEditText
                                    android:id="@+id/tie_mpin"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_5sdp"
                                    android:cursorVisible="false"
                                    android:digits="1234567890"
                                    android:imeOptions="actionDone"
                                    android:inputType="number"
                                    android:maxLength="5"
                                    android:textIsSelectable="false"
                                    android:textSize="20sp"
                                    app:pinCharacterMask="*" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/rL_login_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:minHeight="@dimen/_40sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/login_layout2">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txt_not_you"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="loginClick"
                            android:text="@string/not_you"
                            android:textColor="?attr/primaryTextColor"
                            android:textSize="@dimen/_13ssp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/forgot_m_pin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="loginClick"
                            android:text="@string/forgot_mpin"
                            android:textColor="?attr/primaryTextColor"
                            android:textSize="@dimen/_13ssp"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:backgroundTint="?attr/secondaryTextColor"
                        android:text="@string/register_now"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_11ssp"
                        app:cornerRadius="@dimen/_5sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rL_login_layout" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>