<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.CurrentWeatherFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/weather_common_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:hint="@string/enter_city"
        app:boxStrokeColor="?attr/secondaryTextColor"
        app:hintTextColor="?attr/secondaryTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="?attr/primaryTextColor"
            android:textColorHint="?attr/secondaryTextColor"
            android:textSize="@dimen/_10ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_15sdp"
        android:backgroundTint="?attr/primaryTextColor"
        android:text="@string/proceed"
        android:textColor="@android:color/white"
        app:iconGravity="textEnd"
        app:iconTint="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_search"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fab_proceed">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:text="@string/details"
            android:textColor="?attr/primaryTextColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_details" >

            <ImageView
                android:id="@+id/img_indicator"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:contentDescription="Icon for current weather." />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_city_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="0.8"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_location" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sunrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_temperature">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_sunrise_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:text="@string/sunrise"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_sunrise_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sunset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_sunrise">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_sunset_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:text="@string/sunset"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_sunset_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>