<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/_20sdp">

            <include
                android:id="@+id/toolbar"
                layout="@layout/weather_common_toolbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:hint="@string/enter_first_name"
                    app:boxStrokeColor="?attr/secondaryTextColor"
                    app:hintTextColor="?attr/secondaryTextColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                        android:singleLine="true"
                        android:textColor="?attr/primaryTextColor"
                        android:textColorHint="?attr/secondaryTextColor"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:hint="@string/enter_last_name"
                    app:boxStrokeColor="?attr/secondaryTextColor"
                    app:hintTextColor="?attr/secondaryTextColor"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz0123456789"
                        android:textColor="?attr/primaryTextColor"
                        android:textColorHint="?attr/secondaryTextColor"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/ll_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_last_name">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:hint="@string/enter_mobile_number"
                        app:boxStrokeColor="?attr/secondaryTextColor"
                        app:hintTextColor="?attr/secondaryTextColor"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ll_mobile">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:digits="0123456789"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:singleLine="true"
                            android:textColor="?attr/primaryTextColor"
                            android:textColorHint="?attr/secondaryTextColor"
                            android:textSize="@dimen/_10ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_mpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:orientation="vertical"
                    android:weightSum="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_last_name">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:text="@string/set_mpin" />

                    <com.example.borjaweatherapp.utils.LoginPinEditText
                        android:id="@+id/tie_mpin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:cursorVisible="false"
                        android:digits="1234567890"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="5"
                        android:textIsSelectable="false"
                        android:textSize="20sp"
                        app:pinCharacterMask="*" />
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fab_proceed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/_15sdp"
                    android:backgroundTint="?attr/primaryTextColor"
                    android:text="@string/proceed"
                    android:textColor="@android:color/white"
                    app:iconGravity="textEnd"
                    app:iconTint="@android:color/white"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_emailId"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>